--- a/style.css
+++ b/style.css
@@ -69,3 +69,10 @@ body{
   border-radius: 5px;
   background: #4A98F7;
 }
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+}
